@@ -1,8 +1,7 @@
 /*
- * Chaînes de caractères à traduire générées par
- * Glade. Ajouter ce fichier au fichier POTFILE.in
- * de votre projet. NE PAS compiler ce fichier
- * avec le reste de votre application.
+ * Translatable strings file generated by Glade.
+ * Add this file to your project's POTFILES.in.
+ * DO NOT compile it as part of your application.
  */
 
 gchar *s = N_("Welcome to TiEmu II");
@@ -46,6 +45,7 @@ gchar *s = N_("Low LCD update");
 gchar *s = N_("_Normal view (x1)");
 gchar *s = N_("_Large view (x2)");
 gchar *s = N_("_Full screen");
+gchar *s = N_("Custom view");
 gchar *s = N_("Skin for current calc");
 gchar *s = N_("No skin (just LCD).");
 gchar *s = N_("None");
