@@ -6,6 +6,7 @@ SubVersion: $Id$
 	- [roms] $1470-76: 
 		don't restart the whole GUI when switching view mode.
 		The main wnd can be resized by dragging it and its content is automatically scaled.
+	- [roms] $1478: popup menu and tiemu.ini updated to support custom scaling factor.
 	
 - 31/05/2005, version 2.00-rc2:
 	- [kevin] $1357/1362: added support for disassembling ER_throw
